@@ -25,6 +25,15 @@
 #include "global.h"
 #include "cong-plugin-manager.h"
 #include "cong-plugin.h"
+#include "cong-service-doc-tool.h"
+#include "cong-service-document-factory.h"
+#include "cong-service-editor-node-factory.h"
+#include "cong-service-exporter.h"
+#include "cong-service-importer.h"
+#include "cong-service-node-property-dialog.h"
+#include "cong-service-node-tool.h"
+#include "cong-service-print-method.h"
+#include "cong-service-tool.h"
 
 struct CongPluginManager
 {
