@@ -30,12 +30,13 @@
 #include "cong-error-dialog.h"
 #include "cong-dialog.h"
 #include "cong-primary-window.h"
-#include "cong-fake-plugin-hooks.h"
 #include "cong-dispspec.h"
 #include "cong-dispspec-element.h"
 #include "cong-command.h"
 #include "cong-util.h"
 
+#include "cong-fake-plugin-hooks.h"
+#include "cong-service-doc-tool.h"
 
 static gboolean doc_filter(CongServiceDocTool *tool, CongDocument *doc, gpointer user_data)
 {
