@@ -1,5 +1,9 @@
 2004-03-11  Dave Malcolm  <david@davemalcolm.demon.co.uk>
 
+	* cong-editor-node.c, cong-menus.c, cong-plugin-manager.c, cong-plugin.c, cong-plugin.h, cong-service-exporter.h, cong-service-node-property-dialog.h, cong-service-node-tool.h, cong-service-print-method.h, plugin-admonition.c, plugin-cleanup-source.c, plugin-convert-case.c, plugin-docbook.c, plugin-dtd.c, plugin-fo.c, plugin-lists.c, plugin-paragraph.c, plugin-print-source.c, plugin-random.c, plugin-save-dispspec.c, plugin-sgml.c, plugin-templates.c, plugin-tests.c, plugin-validate.c, popup.c
+
+	Rationalise headers so that plugin code no longer depends on all service header files; stops an irritatingly big recompile every time I make small changes to the almost entirely unrelated CongEditorNode header
+
 	* cong-editor-line-manager.c
 
 	Connect to line_regeneration_required signal, force the regeneration of areas for the node when it occurs.  Simple text editing now works a lot better.
